@@ -5,13 +5,13 @@
 
 package net.atos.zac.authentication;
 
-import java.io.Serializable;
-import java.util.Set;
-
 import javax.enterprise.inject.Instance;
 import javax.enterprise.inject.Produces;
 import javax.inject.Inject;
 import javax.servlet.http.HttpSession;
+import java.io.Serializable;
+import java.util.Collections;
+import java.util.Set;
 
 public class SecurityUtil implements Serializable {
 
@@ -24,7 +24,7 @@ public class SecurityUtil implements Serializable {
 
     public static final LoggedInUser FUNCTIONEEL_GEBRUIKER =
             new LoggedInUser("FG", "", "Functionele gebruiker", "Functionele gebruiker", null,
-                             Set.of("functionele_gebruiker"));
+                    Set.of("functionele_gebruiker"), Collections.emptySet());
 
     @Inject
     @ActiveSession
